Aggiunte query significative

--- a/Udbp.tex
+++ b/Udbp.tex
@@ -465,4 +465,6 @@
 	\textit{Vincolo di integrita' referenziale tra "Id\_Persona" e "Id" in Persona e tra "Id\_Cast" e "Id" in Cast}.\\\\
 	\textbf{Cast}(\underline{Id}, Nome).\\\\
 	\textbf{Indirizzo}(\underline{Id}, Via, Citta, n\_civ, Stato, Cap)\\\\
+	\section{Query e Indici}
+	voto medio a film, affluenza per cinema, attore maggiori pagamenti, lista di film per attori, biglietti venduti con uno specifico attore, rapporto incasso per spettacolo a cinema.
 \end{document} 
