Typo nella Prog. Conc.

--- a/Udbp.tex
+++ b/Udbp.tex
@@ -30,7 +30,7 @@
 	showtabs=false,
 }
 \lstset{style=mystyle}
-\setmainfont{Arial}
+%\setmainfont{Arial}
 \graphicspath{ {./} }
 
 \begin{document}
@@ -326,8 +326,7 @@
 	\begin{itemize}
 		\item \textbf{Cinema}: Rappresenta un cinema.
 		\begin{itemize}
-			\item \underline{Nome: \textit{string} univoco}
-			\item Numero sale: \textit{int}
+			\item Nome: \textit{string}
 			\item Indirizzo: attributo composto
 				\subitem Via: \textit{string}
 				\subitem Citta': \textit{string}
@@ -398,7 +397,6 @@
 		\end{itemize}
 		\item \textbf{Recensione}: Rappresenta la recensione di un film da parte di una persona.
 		\begin{itemize}
-			\item \underline{Id: \textit{string}}
 			\item Commento: \textit{string}
 			\item Voto: \textit{int}
 		\end{itemize}
